fix: Adjust height and min-height properties in dark mode CSS
This fix is meant to ensure the lighter background of the body stays flexible in height, but cover the first 100% height screen the user sees.

--- a/html/styles/dark-mode.css
+++ b/html/styles/dark-mode.css
@@ -4,6 +4,7 @@
 
 html {
   background: #121212;
+  height: 100dvh;
 }
 
 body {
@@ -13,6 +14,7 @@ body {
   padding: 1rem 1rem;
   /* clear default body 8px margin */
   margin: 0px;
+  min-height: 100%; /* Make background flexible, but cover at least full height */
 }
 
 h1,
